# Copyright 2017-2022 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_casatables"
version = "0.9.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Interfacing to the CASA table format within the Rubbl framework.
"""

[package.metadata.internal_dep_versions]
rubbl_casatables_impl = "thiscommit:2021-11-04:9Lgzrtq"
rubbl_core = "thiscommit:2024-08-12:zKS3IWN"

[dependencies]
ndarray = "0.16.1"
never = "0.1.0"
rubbl_casatables_impl = { version =">=0.3.31100,<1", path = "../casatables_impl" }
rubbl_core = { version =">=0.5.0,<1", path = "../core" }
thiserror = "2.0.12"

[build-dependencies]
cc = { version = "1.2.19", features = ["parallel"] }

[dev-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["cargo"] }
rubbl_core = { version =">=0.5.0,<1", path = "../core", features = [
    "notifications",
] }
tempfile = "3.19.1"
