# Copyright 2017-2020 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_casatables_impl"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "LGPL-2.0+"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
A bundle of C++ code that can read the CASA table format for Rubbl.
"""
links = "casa"

[build-dependencies]
cc = { version = "1.2.29", features = ["parallel"] }
