# Copyright 2017-2020 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Facade crate and CLI interface for the Rubbl astrophysics data analysis framework.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:re8eeQu5"

[dependencies]
clap = "^2.34"
failure = "^0.1"
failure_derive = "^0.1"
rubbl_core = { version ="0.0.0-dev.0", path = "../core" }
