# Copyright 2017-2022 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl"
version = "0.3.1"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Facade crate and CLI interface for the Rubbl astrophysics data analysis framework.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:re8eeQu5"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["cargo"] }
rubbl_core = { version =">=0.2.0,<1", path = "../core" }
thiserror = "1.0.63"
