# Copyright 2017-2022 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Facade crate and CLI interface for the Rubbl astrophysics data analysis framework.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:re8eeQu5"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["cargo"] }
rubbl_core = { version ="0.0.0-dev.0", path = "../core" }
thiserror = "2.0.0"
