# Copyright 2017-2022 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_core"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Core types and traits for Rubbl, a Rust package for astrophysics.
"""

[features]
notifications = ["anyhow", "clap", "termcolor", "termcolor"]

[dependencies]
byteorder = "1.4.0"
ndarray = "0.15.0"
num-complex = "0.4.0"
thiserror = "1.0.7"

anyhow = { version = "1.0.0", features = ["backtrace"], optional = true }
clap = { version = "4.0.26", features = ["cargo"], optional = true }
termcolor = { version = "1.1.0", optional = true }
