# Copyright 2017-2023 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_core"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Core types and traits for Rubbl, a Rust package for astrophysics.
"""

[features]
notifications = ["anyhow", "clap", "termcolor"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"], optional = true }
byteorder = "1.5.0"
clap = { version = "4.4.6", features = ["cargo"], optional = true }
ndarray = "0.15.0"  # see README and src/lib.rs for discussion of constraints here; update when this changes
num-complex = "0.4.4"  # ditto
termcolor = { version = "1.3.0", optional = true }
thiserror = "1.0.50"
