# Copyright 2018-2020 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_fits"
version = "0.2.3"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Core support for the FITS container format in the Rubbl framework.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:peif3Eng"
rubbl_visdata = "thiscommit:2020-12-15:Ox8roFai"

[dependencies]
byteorder = "^1.4"
clap = "^2.33"
failure = "^0.1"
failure_derive = "^0.1"
rubbl_core = { path = "../core", version ="^0.2.0"}
rubbl_visdata = { path = "../visdata", version ="^0.2.0"}
