# Copyright 2018-2021 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_fits"
version = "0.2.4"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Core support for the FITS container format in the Rubbl framework.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:peif3Eng"
rubbl_visdata = "thiscommit:2020-12-15:Ox8roFai"

[dependencies]
failure = "^0.1"
failure_derive = "^0.1"
rubbl_core = { path = "../core", version =">=0.2.0,<1"}
rubbl_visdata = { path = "../visdata", version =">=0.2.0,<1"}

[dev-dependencies]
clap = "^2.33"
