# Copyright 2017-2019 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_miriad"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"

[package.metadata]

[package.metadata.internal_dep_versions]
rubbl_core = "manual:^0.1.2"
rubbl_visdata = "manual:^0.1.0"

[dependencies]
byteorder = "^1.3"
clap = "^2.33"
failure = "^0.1"
failure_derive = "^0.1"
openat = "^0.1.19"
pbr = "^1.0"
rubbl_core = { path = "../core", version ="^0.1.2"}
rubbl_visdata = { path = "../visdata", version ="^0.1.0"}
