# Copyright 2017-2019 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_miriad"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Interfacing to MIRIAD radio astronomy data formats within the Rubbl framework.
"""

[package.metadata]

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:aishi6Ae"
rubbl_visdata = "thiscommit:2020-12-15:Rohw0kei"

[dependencies]
byteorder = "^1.4"
clap = "^2.33"
failure = "^0.1"
failure_derive = "^0.1"
openat = "^0.1.20"
pbr = "^1.0"
rubbl_core = { path = "../core", version ="0.0.0-dev.0"}
rubbl_visdata = { path = "../visdata", version ="0.0.0-dev.0"}
