# Copyright 2017-2022 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_miriad"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Interfacing to MIRIAD radio astronomy data formats within the Rubbl framework.
"""

[package.metadata]

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:aishi6Ae"
rubbl_visdata = "thiscommit:2020-12-15:Rohw0kei"

[dependencies]
byteorder = "1.4.0"
openat = "0.1.7"
rubbl_core = { path = "../core", version ="0.0.0-dev.0"}
rubbl_visdata = { path = "../visdata", version ="0.0.0-dev.0"}
thiserror = "1.0.48"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["cargo"] }
pbr = "1.1.1"
