# Copyright 2017-2020 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_visdata"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:Fiequ0wa"

[dependencies]
rubbl_core = { path = "../core", version ="0.0.0-dev.0"}
