# Copyright 2017-2020 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the MIT License.

[package]
name = "rubbl_visdata"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/pkgw/rubbl"
repository = "https://github.com/pkgw/rubbl"
description = """
Preliminary work on generic data structures for radio interferometric visibility data.
"""

[package.metadata.internal_dep_versions]
rubbl_core = "thiscommit:2020-12-15:Fiequ0wa"

[dependencies]
anyhow = "1.0.98"
rubbl_core = { path = "../core", version ="0.0.0-dev.0"}
